--- a/website/gatsby-example-site/package.json
+++ b/website/gatsby-example-site/package.json
@@ -20,12 +20,13 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "NODE_ENV=development gatsby build",
-    "develop": "NODE_ENV=development gatsby develop",
+    "build": "gatsby build",
+    "develop": "cross-env NODE_ENV=development gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "cross-env": "^5.1.3",
     "prettier": "^1.10.2"
   }
 }
