--- a/package.json
+++ b/package.json
@@ -1,55 +1,18 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "gatsby-starter-default",
+  "description": "Gatsby default starter",
+  "version": "1.0.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "babel-plugin-lodash": "^3.3.2",
-    "gatsby": "^1.9.195",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-catch-links": "^1.0.16",
-    "gatsby-plugin-feed": "^1.3.18",
-    "gatsby-plugin-google-analytics": "^1.0.19",
-    "gatsby-plugin-manifest": "^1.0.14",
-    "gatsby-plugin-nprogress": "^1.0.12",
-    "gatsby-plugin-offline": "^1.0.14",
+    "dotenv": "^5.0.0",
+    "gatsby": "^1.9.158",
+    "gatsby-image": "^1.0.37",
+    "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sharp": "^1.6.28",
-    "gatsby-plugin-sitemap": "^1.2.13",
-    "gatsby-plugin-twitter": "^1.0.17",
-    "gatsby-remark-autolink-headers": "^1.4.12",
-    "gatsby-remark-copy-linked-files": "^1.5.27",
-    "gatsby-remark-images": "^1.5.44",
-    "gatsby-remark-prismjs": "^1.2.15",
-    "gatsby-remark-responsive-iframe": "^1.4.17",
+    "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-source-contentful": "^1.3.38",
-    "gatsby-source-filesystem": "^1.5.19",
-    "gatsby-transformer-remark": "^1.7.32",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "react": "^15.6.1",
-    "react-disqus-comments": "^1.1.1",
-    "react-dom": "^15.6.1",
-    "react-helmet": "^5.2.0",
-    "react-share": "^1.19.1",
-    "react-twitter-widgets": "^1.7.1"
-  },
-  "devDependencies": {
-    "cli-glob": "^0.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.6.1",
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.9.2",
-    "remark-cli": "^4.0.0",
-    "remark-preset-lint-recommended": "^3.0.1",
-    "stylefmt": "^6.0.0",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
-    "write-good": "^0.11.3"
+    "gatsby-transformer-sharp": "^1.6.19",
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
@@ -57,21 +20,13 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
-    "dev": "npm run develop",
-    "serve": "gatsby serve",
     "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
-    "clean": "rm -rf public",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:md": "remark content/posts/",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write"
+    "develop": "cross-env NODE_ENV=development gatsby develop",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "remarkConfig": {
-    "plugins": [
-      "remark-preset-lint-recommended"
-    ]
+  "devDependencies": {
+    "cross-env": "^5.1.3",
+    "prettier": "^1.10.2"
   }
 }
