--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-source-contentful": "^1.3.38",
+    "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.19",
     "react-helmet": "^5.2.0"
   },
