--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^1.9.158",
     "gatsby-image": "^1.0.37",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-source-contentful": "^1.3.38",
