--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.5",
+    "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-source-contentful": "^1.3.38",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.19",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-zmage": "^0.1.7"
   },
   "keywords": [
     "gatsby"
