add gallery big images - WIP carrousel

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gatsby-source-contentful": "^1.3.38",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.19",
+    "radium": "^0.24.0",
+    "react-coverflow": "^0.2.14",
     "react-helmet": "^5.2.0",
-    "react-zmage": "^0.1.7"
+    "react-zmage": "^0.2.0"
   },
   "keywords": [
     "gatsby"
