--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.19",
     "radium": "^0.24.0",
-    "react-cover-carousel": "0.0.3",
+    "react-cover-carousel": "0.0.5",
     "react-coverflow": "^0.2.14",
     "react-helmet": "^5.2.0",
     "react-modal": "^3.4.5",
@@ -29,7 +29,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "develop": "cross-env NODE_ENV=development gatsby develop",
+    "develop": "cross-env NODE_ENV=development gatsby develop -H 0.0.0.0",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
