--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "vogelvrij.be",
+  "description": "Vogelvrij website",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Easybird <easybird85@gmail.com>",
   "dependencies": {
     "dotenv": "^5.0.0",
     "gatsby": "^1.9.158",
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sharp": "^1.6.34",
+    "gatsby-plugin-sitemap": "^1.2.14",
     "gatsby-source-contentful": "^1.3.38",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.19",
