--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-coverflow": "^0.2.14",
     "react-helmet": "^5.2.0",
     "react-modal": "^3.4.5",
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.7.10",
     "react-zmage": "^0.2.0"
   },
   "keywords": [
