--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^1.0.51",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-hotjar": "^1.1.1",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sharp": "^1.6.34",
